This is a history of major changes to {my wmii configuration}[http://people.ucsc.edu/~skurapat/wmii.html].


= 2006-09-29

* Fixed bug in toggle_maximize method (in rc.rb) due to accessing a nonexistent file in IXP file system.
  * Thanks to Christian von Mueffling for reporting this bug.


= 2006-09-28

* Added number_view_buttons method (in rc.rb) which numbers the view buttons displayed on the bar, from left to right.


= 2006-09-27

* Included two main concurrency fixes for Ruby-IXP.


= 2006-09-24

* Added two-stage event handling, to minimize the number of events missed while processing an event.


= 2006-09-23

* Fixed event & status bar loop. It was forgotten when I transitioned to the new Ixp::Node#method_missing behavior on 2006-09-22.
  * Thanks to Fredrik Ternerot for reporting this bug.

* When selecting views based on their first letter: if more than one view matches, then they are cycled (adapted from Fredrik Ternerot).

* Added focus_view_matching method in rc.rb.

* Fixed errors that occurred when the tile and diamond arrangements were applied to empty views.


= 2006-09-22

* Ixp::Node#method_missing now only dereferences files. Also, the ! notation has been removed, as you can see below.

    >> Wmii.fs.bar.status
    => #<Ixp::Node:0xb7b5940c @path="/bar/status">
    >> Wmii.fs.bar.status.read
    => ["colors", "data"]
    >> Wmii.fs.bar.status.data
    => "Fri Sep 22 18:46:11 PDT 2006 | 0.06 0.10 0.08 | 531M 100% /home"
    >> Wmii.fs.bar.status.data!
    => #<Ixp::Node:0xb7b377e4 @path="/bar/status/data!">


= 2006-09-21

* Fix some forgotten changes from show_menu() returning *nil*.

* Exception error message (xmessage) now lets you restart *wmiirc*.

* Updated event loop to generate less 9P traffic.


= 2006-09-20

* Included code from upcoming Ruby-IXP 1.1.0 release.

* Ixp::Node#method_missing now only dereferences a node if the method is suffixed with an exclamation mark.

* show_menu now returns *nil* if nothing was chosen.
